# wow-recipe-calc

./: .gitignore  item_db.pkl  pyproject.toml  tsm_db.pkl  wow-recipe-calc
data/: TBC-Engineering.json
data/items/: item_db.json  vendor_prices.json
data/recipes/tbc/: alchemy.json  blacksmithing.json  cooking.json  enchanting.json  engineering.json  jewelcrafting.json  tailoring.json
data/recipes/vanilla/: alchemy.json
src/: crafting_app.py  main.py
src/client/: item_client.py  tsm_client.py
src/crafts/: craft_planner.py  craft_skill.py  item_db.py  price_manager.py  recipe_graph.py
src/crafts/recipe/: recipe_graph.py  recipe_state.py
src/io/: arguments.py  environment.py  local_cache.py  setup_config.py
src/util/: color.py  graph.py  heap.py  json_wrapper.py  log_manager.py  throttle.py
src/view/: constants.py  ui_manager.py
src/view/frame/: main_window.py  window_banner.py
src/view/frame/tabs/: bom_tab.py  edit_tab.py  plan_tab.py
src/view/styles/: main_window.qss  style_loader.py  window_banner.qss
src/view/styles/tabs/: bom_tab.qss  (+1 more)
src/wow_recipe_calc/: crafting_app.py  main.py
src/wow_recipe_calc/client/: item_client.py  tsm_client.py  wh_client.py
src/wow_recipe_calc/crafts/: craft_planner.py  craft_skill.py  item_db.py  price_manager.py
src/wow_recipe_calc/io/: arguments.py  enums.py  local_cache.py  project_info.py  setup_config.py
src/wow_recipe_calc/util/: color.py  graph.py  heap.py  json_wrapper.py  log_manager.py  project_info.py  throttle.py
src/wow_recipe_calc/view/: constants.py  filter_model.py  ui_manager.py
(+26 files in other folders)
