[project]
name = "wow-recipe-calc"
version = "1.0.0"
description = "GUI-driven WoW profession analyzer for material aggregation, cost calculation, and optimized crafting sequences"
authors = [
    {name = "Kevin Tyrrell", email = "kev070892@gmail.com"}
]
license = "GPL-3.0-or-later"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.33.1,<3.0.0",
    "beautifulsoup4>=4.14.3,<5.0.0",
    "questionary>=2.1.1,<3.0.0",
    "pyside6>=6.11.0,<7.0.0"
]

[project.scripts]
wow-recipe-calc = "wow_recipe_calc.__main__:main"

[tool.poetry]
packages = [{include = "wow_recipe_calc", from = "src"}]
include = [
    {path = "data/**/*", format = ["sdist", "wheel"]},
    {path = "res/**/*", format = ["sdist", "wheel"]},
    {path = "pyproject.toml", format = ["sdist", "wheel"]},
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"